--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "xrpl": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
